@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-06T00:54:35Z",
-  "count_outdated" : 918,
-  "uniques_outdated" : 525,
-  "count" : 929,
-  "uniques" : 536,
+  "timestamp" : "2025-05-08T00:55:21Z",
+  "count_outdated" : 919,
+  "uniques_outdated" : 526,
+  "count" : 930,
+  "uniques" : 537,
   "clones" : [
-    {
-      "timestamp": "2025-04-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-05-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
